1.2.3i3:
    Core:
    * FIX: fixed typo in core startup message "logging initial states"

    Checks & Agents:
    * windows_agent: increased maximum plugin output buffer size to 2MB
    * check_icmp: New WATO rule for custom PING checks
    * FIX: windows_agent: fixed bug in cleanup of open thread handles
    * FIX: cups default printer is now monitored again in linux agent
    * FIX: host notification email in html format: fixed formating error 
           (typo in tag)


    Multisite:
    * FIX: add missing service icons to view "All Services with this descr..."
    * FIX: ldap attribute plugins: fixed crash when parameters are None
    * FIX: avoid duplicate output of log message in log tables

    WATO:
    * Rule "State and count of processes": New configuration options:
           virtual and resident memory levels
    * FIX: The rule "State and count of processes" is no longer available
           in "Parameters for inventorized check". This rule was solely
           intented for "Manual checks" configuration

1.2.3i2:
    Core:
    * New option -B for just generating the configuration
    * Introduced persistent host address lookup cache to prevent issues
      loading an unchanged configuration after a single address is not resolvable anymore
    * Assigning a service to a cluster host no longer requires a reinventory
    * Setting a check_type or service to ignore no longer requires a reinventory
      Note: If the ignore rule is removed the services will reappear
    * Config creation: The ignore services rule now also applies to custom, active
                       and legacy checks
    * Predictive monitoring: correctly handle spaces in variable names (thanks
       to Karl Golland)
    * New man page browser for console (cmk -m)
    * New option explicit_snmp_communities to override rule based SNMP settings
    * Preparations for significant SNMP monitoring performance improvement