@@ -1,3 +1,5 @@
+#!/bin/bash
+SITE=${SITE:-$(cat ../.site)}
 SITE=${SITE:-$(omd sites --bare | head -n 1)}
 sudo mkdir -p /omd/sites/$SITE/share/check_mk/notifications
 sudo cp -vp * /omd/sites/$SITE/share/check_mk/notifications
